# scripthelper

./: .gitignore  CHANGELOG.md  LICENSE  README.md  bootstrap.ps1  compile-readme.py  do-release.bat  do-release.ps1  example1.py  example10.py  example11.py  example2.py  example2b.py  example2c.py  example3.py  example4.py  example4module.py  example5.py  example6.py  example7.py  example8.py  example9.py  justfile  pyproject.toml  setup.py  test-all.ps1  test_examples.py
scripthelper/: __init__.py
src/scripthelper/: __init__.py
