[project]
name = "scripthelper"
version = "23.4"
description = "Helper module for creating simple Python scripts"
readme = "README.compiled.md"
license = {text = "MIT License"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "tqdm >= 4.31.1",
    "coloredlogs >= 10.0",
    "verboselogs >= 1.7",
    "stackprinter >= 0.2.10",
    "prettyprinter >= 0.18.0",
    "persistedstate >= 23.6",
]

[project.optional-dependencies]
dev = [
    "black",
    "build",
    "mypy",
    "twine",
]


[[project.authors]]
name = "Máté Farkas"
email = "fm@farkas-mate.hu"

[project.urls]
Homepage = "https://github.com/presidento/scripthelper"
Changelog = "https://github.com/presidento/scripthelper/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"